test/src/test/k3s/dev/kafka-console/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-console
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: kafka-console
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kafka-console
    spec:
      containers:
        - name: kafka-console
          image: docker.io/redpandadata/console
          imagePullPolicy: IfNotPresent
          envFrom:
            - configMapRef:
                name: kafka-console-env
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /admin/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 20
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 5
