test/src/test/k3s/dev/kafka-console/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-console
spec:
  rules:
    - host: kafka.${ip}.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-console
                port:
                  name: http
