test/src/test/k3s/dev/kafka-console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-console
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: kafka-console
